fix(layouts): 50px top of content covered by navbar

--- a/assets/stylesheets/coursemology.org/layout.scss
+++ b/assets/stylesheets/coursemology.org/layout.scss
@@ -11,6 +11,8 @@
 }
 
 .footer-buffer {
+  padding-top: 5rem;
+
   @media screen and (max-width: 937px) {
     padding-bottom: 120px;
   }
